hphp/test/zend/good/Zend/tests/instanceof_001.php.expectf
bool(true)
bool(true)
bool(true)
bool(true)
bool(false)

Catchable fatal error: Object of class stdClass could not be converted to string in %s/instanceof_001.php on line 16
